--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,13 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1"
          metadata-complete="true">
-
+<servlet>
+    <servlet-name>CookleDemo01</servlet-name>
+    <servlet-class>com.bt.servlet.CookleDemo01</servlet-class>
+</servlet>
+    <servlet-mapping>
+        <servlet-name>CookleDemo01</servlet-name>
+        <url-pattern>/c1</url-pattern>
+    </servlet-mapping>
 
 </web-app>
